--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,6 @@
 dist
 !packages/elvis-colors/*
+!packages/elvis-typography/*
 e2e
 node_modules
 coverage
@@ -12,5 +13,3 @@ packages/elvis/src/templates/elvis.template.js
 packages/elvis/icons.js
 packages/elvis/icons.d.ts
 packages/elvis/src/variables/typography.scss
-
-
