--- a/packages/elvis-typography/package.json
+++ b/packages/elvis-typography/package.json
@@ -1,11 +1,19 @@
 {
   "name": "@elvia/elvis-typography",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Elvia typography",
   "license": "MIT",
   "author": "",
-  "main": "src/elviaTypography.js",
+  "main": "dist/elviaTypography.js",
+  "style": "dist/elviaTypography.scss",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp"
+  },
+  "devDependencies": {
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-header": "^2.0.9",
+    "gulp-prettier": "^4.0.0"
   }
 }
