--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
     "@elvia/elvis-colors": "^1.4.1",
+    "@elvia/elvis-typography": "^2.2.0",
     "bootstrap": "4.6.1"
   },
   "devDependencies": {
