--- a/packages/components/components/elvis-breadcrumb/package.json
+++ b/packages/components/components/elvis-breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-breadcrumb",
-  "version": "1.4.1",
+  "version": "2.0.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -9,9 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@elvia/elvis-colors": "^1.2.1",
-    "@elvia/elvis-component-wrapper": "^2.2.2",
-    "@elvia/elvis-icon": "^1.1.1",
+    "@elvia/elvis-colors": "^1.4.1",
+    "@elvia/elvis-component-wrapper": "^2.3.2",
+    "@elvia/elvis-icon": "^1.2.0",
+    "@elvia/elvis-toolbox": "^1.3.1",
     "@elvia/elvis-typography": "^1.2.0",
     "styled-components": "^5.3.3"
   },
