--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -59,6 +59,7 @@
     "react-is": "^17.0.2",
     "rxjs": "^6.5.5",
     "sass": "^1.33.0",
+    "string-similarity": "^4.0.4",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -72,6 +73,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/natural-compare-lite": "^1.4.0",
     "@types/node": "12.20.40",
+    "@types/string-similarity": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "babel-eslint": "^10.1.0",
