--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -48,6 +48,7 @@
     "classlist.js": "^1.1.20150312",
     "contentful": "^8.5.8",
     "dotenv": "^10.0.0",
+    "fuse.js": "^6.6.2",
     "glob": "^7.1.6",
     "natural-compare-lite": "^1.4.0",
     "ng-dynamic-component": "^10.0.0",
@@ -59,7 +60,6 @@
     "react-is": "^17.0.2",
     "rxjs": "^6.5.5",
     "sass": "^1.33.0",
-    "string-similarity": "^4.0.4",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
