--- a/package.json
+++ b/package.json
@@ -55,17 +55,17 @@
     "node": ">=14"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
     "prettier": "^2.0.5"
   },
   "devDependencies": {
     "@date-io/core": "^1.3.6",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
     "@vue/cli-service": "4.5.13",
     "codelyzer": "^6.0.2",
-    "eslint": "^7.17.0",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "express": "^4.17.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.7",
@@ -75,7 +75,7 @@
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
+    "typescript": "~4.4.0",
     "zone.js": "~0.11.4"
   },
   "resolutions": {
