--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -35,6 +35,7 @@
     "@elvia/elvis-card": "portal:../components/components/elvis-card",
     "@elvia/elvis-carousel": "portal:../components/components/elvis-carousel",
     "@elvia/elvis-chip": "portal:../components/components/elvis-chip",
+    "@elvia/elvis-datepicker": "portal:../components/components/elvis-datepicker",
     "@elvia/elvis-dropdown": "portal:../components/components/elvis-dropdown",
     "@elvia/elvis-icon": "portal:../components/components/elvis-icon",
     "@elvia/elvis-modal": "portal:../components/components/elvis-modal",
@@ -72,10 +73,11 @@
     "@angular/language-service": "^13.2.4",
     "@types/jasmine": "3.10.3",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/natural-compare-lite": "^1.4.0",
     "@types/node": "12.20.40",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "babel-eslint": "^10.1.0",
     "codelyzer": "^6.0.0",
     "contentful-management": "^7.51.1",
