--- a/.github/workflows/percyBaselineUpdate.yml
+++ b/.github/workflows/percyBaselineUpdate.yml
@@ -11,12 +11,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Get NPM Cache
+      - name: Get Yarn Cache
         uses: actions/setup-node@v3
         with:
-          cache: 'npm'
+          cache: 'yarn'
       - name: Install
-        run: npm install
+        run: yarn install --immutable
       - name: Run Percy on Elvis
         run: |
           cd packages/elvis
