--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "start:vue": "cd packages/components/frameworks/vue-test && yarn start",
     "build:components": "yarn build:colors && yarn build:typography && cd packages/components && yarn build",
     "build:web": "yarn && yarn build:colors && yarn build:typography && cd packages/elvis-assets-icons && yarn run build && cd ../components && yarn run build:production && cd ../web && yarn run contentful:production && yarn run build:production && cd ../components/frameworks/react-ssr && yarn run production",
+    "build:elvis": "cd packages/elvis && yarn build",
     "build:colors": "cd packages/elvis-colors && yarn build",
     "build:typography": "cd packages/elvis-typography && yarn build",
+    "contentful": "cd packages/web && yarn contentful",
     "prettier-elvis": "yarn prettier --write \"packages/elvis/**/*.js\"",
     "prettier-doc": "yarn prettier --write \"packages/web/src/**/*.ts\"",
     "prettier-comp": "yarn prettier --write \"packages/components/**/*.{js,ts,tsx}\"",
