--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -20,6 +20,7 @@
     "@elvia/elvis-carousel": "*",
     "@elvia/elvis-chip": "*",
     "@elvia/elvis-datepicker": "*",
+    "@elvia/elvis-datepicker-range": "*",
     "@elvia/elvis-divider": "*",
     "@elvia/elvis-dropdown": "*",
     "@elvia/elvis-icon": "*",
