--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
     "@elvia/elvis-carousel": "portal:../components/components/elvis-carousel",
     "@elvia/elvis-chip": "portal:../components/components/elvis-chip",
     "@elvia/elvis-datepicker": "portal:../components/components/elvis-datepicker",
+    "@elvia/elvis-datepicker-range": "portal:../components/components/elvis-datepicker-range",
     "@elvia/elvis-dropdown": "portal:../components/components/elvis-dropdown",
     "@elvia/elvis-icon": "portal:../components/components/elvis-icon",
     "@elvia/elvis-modal": "portal:../components/components/elvis-modal",
