--- a/packages/components/components/elvis-component-wrapper/package.json
+++ b/packages/components/components/elvis-component-wrapper/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "author": "",
   "main": "./dist/elvia-component.js",
+  "types": "./dist/elvia-component.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
