--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,13 +1,13 @@
-name: 'Pull Request Labeler'
-on:
-  - pull_request_target
+name: Labeler
+on: [pull_request]
 
 jobs:
-  triage:
+  label:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
-    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/labeler@v4
         with:
