--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -4,7 +4,7 @@ components:
 dependencies:
   - yarn.lock
   - package.json
-  - /**/*/package.json
+  - */package.json
 
 design.elvia.io:
   - packages/web/**/*
