--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -5,7 +5,7 @@ dependencies:
   - yarn.lock
 
 design.elvia.io:
-  - packages/web/**/*
+  - any: ['packages/web/**/*', '!packages/web/src/assets/(js|changelogs)/**/*']
 
 elvis:
   - packages/elvis/**/*
