--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.4",
-    "@elvia/elvis-icon": "^1.1.1",
+    "@elvia/elvis-icon": "1.3.0",
     "@elvia/elvis-toolbox": "^1.3.2",
     "styled-components": "^5.3.3"
   },
