--- a/packages/components/components/elvis-chip/package.json
+++ b/packages/components/components/elvis-chip/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
-    "@elvia/elvis-icon": "^1.1.1",
+    "@elvia/elvis-icon": "1.3.0",
     "@elvia/elvis-toolbox": "^1.3.2",
     "@react-aria/interactions": "^3.8.4",
     "classnames": "^2.3.1",
