--- a/packages/components/components/elvis-pagination/package.json
+++ b/packages/components/components/elvis-pagination/package.json
@@ -12,7 +12,7 @@
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-dropdown": "^3.0.0",
-    "@elvia/elvis-icon": "^1.1.1",
+    "@elvia/elvis-icon": "1.3.0",
     "@elvia/elvis-toolbox": "^1.3.2",
     "@elvia/elvis-typography": "^2.1.0",
     "styled-components": "^5.3.3"
