--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-accordion",
-  "version": "2.5.0",
+  "version": "2.5.0-beta.1",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -13,6 +13,7 @@
     "@elvia/elvis-component-wrapper": "^2.2.4",
     "@elvia/elvis-icon": "1.3.0",
     "@elvia/elvis-toolbox": "^1.3.2",
+    "@elvia/elvis-typography": "^2.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
