--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-accordion",
-  "version": "2.6.0-beta.1",
+  "version": "2.6.0",
   "description": "",
   "main": "web_component.js",
   "scripts": {
