--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
     "zone.js": "~0.11.4"
   },
   "resolutions": {
-    "@types/react": "17.0.39",
-    "@angular-devkit/build-angular": "14.0.0"
+    "@types/react": "17.0.39"
   },
   "packageManager": "yarn@3.2.1"
 }
