--- a/package.json
+++ b/package.json
@@ -77,12 +77,11 @@
     "rxjs": "^6.5.3",
     "safe-json-stringify": "^1.2.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.0",
+    "typescript": "~4.7.2",
     "zone.js": "~0.11.4"
   },
   "resolutions": {
-    "@types/react": "17.0.39",
-    "@angular-devkit/build-angular": "13.3.8"
+    "@types/react": "17.0.39"
   },
   "packageManager": "yarn@3.2.1"
 }
