--- a/packages/components/components/elvis-box/package.json
+++ b/packages/components/components/elvis-box/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-box",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -15,13 +15,13 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
+    "react": "^16.8.0 || ^17.0.0  || ^18.1.0",
+    "react-dom": "^16.8.0 || ^17.0.0  || ^18.1.0",
     "react-is": ">= 16.8.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
+    "react": "^16.8.0 || ^17.0.0  || ^18.1.0",
+    "react-dom": "^16.8.0 || ^17.0.0  || ^18.1.0",
     "react-is": ">= 16.8.0"
   }
 }
