--- a/packages/components/components/elvis-card/package.json
+++ b/packages/components/components/elvis-card/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-card",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -16,8 +16,8 @@
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.1.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.1.0",
     "react-is": ">=16.8.0"
   }
 }
