--- a/packages/components/components/elvis-carousel/package.json
+++ b/packages/components/components/elvis-carousel/package.json
@@ -12,7 +12,7 @@
     "@elvia/elvis-colors": "^1.4.1",
     "@elvia/elvis-component-wrapper": "^2.3.3",
     "@elvia/elvis-icon": "1.3.0",
-    "@elvia/elvis-toolbox": "^1.3.2",
+    "@elvia/elvis-toolbox": "2.0.0",
     "@elvia/elvis-typography": "^2.2.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
