--- a/packages/components/components/elvis-chip/package.json
+++ b/packages/components/components/elvis-chip/package.json
@@ -12,7 +12,7 @@
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "1.3.0",
-    "@elvia/elvis-toolbox": "^1.3.2",
+    "@elvia/elvis-toolbox": "2.0.0",
     "@react-aria/interactions": "^3.8.4",
     "classnames": "^2.3.1",
     "styled-components": "^5.3.3"
