--- a/packages/components/components/elvis-datepicker/package.json
+++ b/packages/components/components/elvis-datepicker/package.json
@@ -14,7 +14,7 @@
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.3.3",
     "@elvia/elvis-icon": "1.3.0",
-    "@elvia/elvis-toolbox": "^1.3.2",
+    "@elvia/elvis-toolbox": "2.0.0",
     "@material-ui/core": "4.12.3",
     "@material-ui/pickers": "3.3.10",
     "classnames": "^2.3.1",
