--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "1.3.0",
-    "@elvia/elvis-toolbox": "^1.3.2",
+    "@elvia/elvis-toolbox": "2.0.0",
     "classnames": "^2.3.1"
   }
 }
