--- a/packages/components/components/elvis-component-wrapper/package.json
+++ b/packages/components/components/elvis-component-wrapper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-component-wrapper",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@elvia/elvis-toolbox": "2.0.0",
+    "@elvia/elvis-toolbox": "^2.0.0",
     "json5": "^2.2.1",
     "lodash.isequal": "^4.5.0",
     "react": "^17.0.0",
