--- a/packages/components/components/elvis-popover/package.json
+++ b/packages/components/components/elvis-popover/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-popover",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.3.2",
     "@elvia/elvis-icon": "1.3.0",
-    "@elvia/elvis-toolbox": "2.0.0",
+    "@elvia/elvis-toolbox": "^2.0.0",
     "classnames": "^2.3.1"
   }
 }
