--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tabs",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-icon": "1.3.0",
-    "@elvia/elvis-toolbox": "2.0.0",
+    "@elvia/elvis-toolbox": "^2.0.0",
     "classnames": "^2.3.1"
   }
 }
