--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ]
   },
   "scripts": {
-    "build": "yarn && yarn build:tokens && nx run-many --target=build:production --exclude=react-ssr,elvia-designsystem && yarn build:tokens && yarn build:elvis && nx build:production elvia-designsystem && nx build:production react-ssr",
+    "build": "yarn && yarn build:tokens && nx run-many --target=build:production",
     "build:web": "nx build elvia-designsystem",
     "build:components": "nx build @elvia/elvis-components",
     "build:elvis": "nx build @elvia/elvis",
