--- a/packages/components/components/elvis-accordion/package.json
+++ b/packages/components/components/elvis-accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-accordion",
-  "version": "2.7.1",
+  "version": "2.7.2",
   "description": "",
   "main": "web_component.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.2.0",
     "@elvia/elvis-component-wrapper": "^2.2.4",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "@elvia/elvis-typography": "^2.2.0",
     "styled-components": "^5.3.3"
