--- a/packages/components/components/elvis-modal/package.json
+++ b/packages/components/components/elvis-modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-modal",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.1",
     "@elvia/elvis-component-wrapper": "^2.3.2",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "@elvia/elvis-typography": "^2.1.0",
     "@material-ui/core": "^4.12.3",
