--- a/packages/components/components/elvis-pagination/package.json
+++ b/packages/components/components/elvis-pagination/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-pagination",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -12,7 +12,7 @@
     "@elvia/elvis-colors": "^1.2.1",
     "@elvia/elvis-component-wrapper": "^2.2.2",
     "@elvia/elvis-dropdown": "^3.0.0",
-    "@elvia/elvis-icon": "1.3.0",
+    "@elvia/elvis-icon": "^1.3.1",
     "@elvia/elvis-toolbox": "^2.0.0",
     "@elvia/elvis-typography": "^2.1.0",
     "styled-components": "^5.3.3"
