--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
     functions = "functions"
-    command = "yarn build:components"
+    command = "yarn build"
 
 [build.environment]
     YARN_VERSION = "3.2.1"
