--- a/packages/components/frameworks/react-ssr/package.json
+++ b/packages/components/frameworks/react-ssr/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "workspaces": {
-    "nohoist": [
+    "installConfig.hoistingLimits": [
       "react-scripts",
       "react-scripts/**"
     ]
