--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -70,7 +70,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
     "@angular/cli": "^14.1.3",
-    "@angular/compiler-cli": "14.2.0",
+    "@angular/compiler-cli": "^14.2.0",
     "@angular/language-service": "^14.1.3",
     "@types/jasmine": "3.10.3",
     "@types/jasminewd2": "~2.0.3",
