--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -66,5 +66,8 @@
     "jsdom-global": "^3.0.2",
     "sass": "^1.33.0",
     "sass-loader": "^10.0.2"
+  },
+  "peerDependencies": {
+    "typescript": "^4.8.2"
   }
 }
