--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,6 +30,7 @@
     "@elvia/elvis": "portal:../elvis",
     "@elvia/elvis-accordion": "portal:../components/components/elvis-accordion",
     "@elvia/elvis-assets-icons": "portal:../elvis-assets-icons",
+    "@elvia/elvis-badge": "portal:../components/components/elvis-badge",
     "@elvia/elvis-box": "portal:../components/components/elvis-box",
     "@elvia/elvis-breadcrumb": "portal:../components/components/elvis-breadcrumb",
     "@elvia/elvis-card": "portal:../components/components/elvis-card",
