--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@babel/register": "^7.18.9",
     "@elvia/elvis-component-wrapper": "*",
+    "@testing-library/dom": "8.19.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "14.4.3",
