--- a/packages/components/components/elvis-tabs/package.json
+++ b/packages/components/components/elvis-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-tabs",
-  "version": "1.5.6",
+  "version": "1.5.7",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -25,5 +25,10 @@
   },
   "devDependencies": {
     "@types/lodash.throttle": "^4.1.7"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
+    "react-is": ">= 16.8.0"
   }
 }
