--- a/packages/components/components/elvis-radio-filter/package.json
+++ b/packages/components/components/elvis-radio-filter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis-radio-filter",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "",
   "license": "MIT",
   "author": "",
@@ -15,7 +15,8 @@
   ],
   "dependencies": {
     "@elvia/elvis-colors": "^1.4.2",
-    "@elvia/elvis-component-wrapper": "^3.0.0",
+    "@elvia/elvis-component-wrapper": "^3.0.1",
+    "@elvia/elvis-toolbox": "^5.8.0",
     "styled-components": "^5.3.3"
   },
   "peerDependencies": {
