--- a/.github/workflows/runComponentTests.yml
+++ b/.github/workflows/runComponentTests.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - 'packages/components/components/**'
 jobs:
-  publishToNpm:
+  runComponentTests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
