--- a/.github/workflows/runComponentTests.yml
+++ b/.github/workflows/runComponentTests.yml
@@ -15,5 +15,7 @@ jobs:
           cache: 'yarn'
       - name: Install
         run: yarn install --immutable
+      - name: Build
+        run: yarn yarn build:tokens && build:components
       - name: Run tests
         run: yarn test
