--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "./scripts/pre-push.sh"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
