--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ packages/web/src/assets/changelogs
 /packages/elvis-assets-icons/icons.js
 /packages/elvis-assets-icons/icons.d.ts
 /packages/elvis-assets-icons/icons.cjs.js
+/packages/elvis/css/elvis.css
+/packages/elvis/css/elvis.min.css
+/packages/elvis/elvis.js
 
 # Only exists if Bazel was run
 /bazel-out
