--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -47,6 +47,7 @@
     "@types/jest": "^29.2.3",
     "@types/jest-axe": "^3.5.5",
     "@types/merge-stream": "^1.1.2",
+    "@types/node": "^18.11.18",
     "@types/styled-components": "^5.1.19",
     "babel-jest": "^29.3.1",
     "babel-preset-minify": "^0.5.2",
