--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -59,8 +59,9 @@
     "fuse.js": "^6.6.2",
     "glob": "^7.1.6",
     "lodash.debounce": "^4.0.8",
+    "marked": "^4.2.12",
     "natural-compare-lite": "^1.4.0",
-    "ngx-markdown": "^14.0.1",
+    "ngx-markdown": "^15.1.0",
     "prettier": "^2.0.5",
     "prismjs": "^1.24.1",
     "rxjs": "^6.5.5",
@@ -80,6 +81,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@angular/language-service": "^15.1.0",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/marked": "^4.0.8",
     "@types/natural-compare-lite": "^1.4.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.44.0",
@@ -91,7 +93,7 @@
     "lint-staged": "^13.0.4",
     "object-path": ">=0.11.5",
     "stylelint": "^10.0.1 || ^11.0.0 || ^12.0.0 || ^13.0.0",
-    "ts-node": "8.10.2",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.4",
     "webpack": "^5.12.0",
     "webpack-subresource-integrity": ">=1.5.1"
