--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,7 +22,8 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "jsdom-global": "^3.0.2",
     "sass": "^1.33.0",
-    "sass-loader": "^13.1.0"
+    "sass-loader": "^13.1.0",
+    "webpack": "^5.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
