--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,7 +22,8 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "jsdom-global": "^3.0.2",
     "sass": "^1.33.0",
-    "sass-loader": "^13.1.0"
+    "sass-loader": "^13.1.0",
+    "webpack": "^5.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -47,6 +48,7 @@
     "@types/jest": "^29.2.3",
     "@types/jest-axe": "^3.5.5",
     "@types/merge-stream": "^1.1.2",
+    "@types/node": "^18.11.18",
     "@types/styled-components": "^5.1.19",
     "babel-jest": "^29.3.1",
     "babel-preset-minify": "^0.5.2",
