--- a/packages/elvis-assets-icons/package.json
+++ b/packages/elvis-assets-icons/package.json
@@ -23,9 +23,15 @@
     "@elvia/elvis-colors": "^1.5.0"
   },
   "devDependencies": {
+    "@types/gulp": "^4.0.10",
+    "@types/gulp-svgmin": "^1.2.2",
+    "@types/node": "^18.11.18",
+    "@types/sharp": "^0.30.2",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-svgmin": "^4.1.0",
-    "sharp": "^0.30.2"
+    "sharp": "^0.30.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
