--- a/packages/elvis/package.json
+++ b/packages/elvis/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elvia/elvis",
-  "version": "10.4.0",
+  "version": "11.0.0",
   "description": "Elvia design system",
   "license": "ISC",
   "homepage": "https://design.elvia.io/",
@@ -13,6 +13,7 @@
   },
   "files": [
     "elvis.js",
+    "elvis.full.js",
     "CHANGELOG.json",
     "README.md",
     "npm-shrinkwrap.json",
@@ -21,7 +22,7 @@
   ],
   "dependencies": {
     "@elvia/elvis-assets-icons": "*",
-    "@elvia/elvis-colors": "^1.4.2",
+    "@elvia/elvis-colors": "^1.7.0",
     "@elvia/elvis-typography": "^2.3.1",
     "bootstrap": "4.6.1",
     "jquery": "1.9.1 - 3",
