--- a/packages/elvis-colors/package.json
+++ b/packages/elvis-colors/package.json
@@ -23,6 +23,6 @@
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "~4.9.5"
   }
 }
